# InferenceEngine

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  dockerfile  vcpkg-configuration.json  vcpkg.json
config/: server.json
k8s/: deployment.yaml
scripts/: build.sh  install_dependencies.sh  test.sh
